--- a/Front-End/interactive-responsive-project/styles/style.css
+++ b/Front-End/interactive-responsive-project/styles/style.css
@@ -31,7 +31,9 @@ h2 {
 .hero-section,
 .top-destination,
 .latest-story,
-.t-highlights {
+.t-highlights,
+.subscribe-content,
+footer {
   padding: 0 1.2rem;
 }
 
@@ -291,6 +293,77 @@ h2 {
   margin-bottom: 0.4rem;
 }
 
+.subscribe {
+  margin-top: 4rem;
+  background-color: rgba(128, 128, 128, 0.881);
+  width: 100%;
+  max-height: 25rem;
+}
+.subscribe .subscribe-content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 4rem 0;
+  gap: 1rem;
+  text-align: center;
+}
+.subscribe .subscribe-content h2 {
+  color: #fff;
+}
+.subscribe .subscribe-content form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+.subscribe .subscribe-content form #email {
+  padding: 0.4rem 0.6rem;
+  width: initial;
+  border-radius: 1rem;
+  border: none;
+  width: 15rem;
+  outline: none;
+}
+.subscribe .subscribe-content form #btn {
+  border: none;
+  outline: none;
+  background-color: rgb(74, 74, 74);
+  color: #fff;
+  padding: 0.4rem 0.6rem;
+  border-radius: 1rem;
+}
+.subscribe .subscribe-content p {
+  font-size: 0.7rem;
+  color: #fff;
+}
+
+footer {
+  margin-top: 4rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+footer .nav {
+  display: grid;
+  gap: 1rem;
+}
+footer .nav .menu {
+  display: grid;
+  gap: 1rem;
+}
+footer .nav .menu p {
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.copy {
+  background-color: #111;
+  color: #fff;
+  text-align: center;
+  line-height: 3rem;
+  margin-top: 2rem;
+}
+
 @media (min-width: 1020px) {
   h2 {
     font-size: 3rem;
@@ -299,7 +372,9 @@ h2 {
   .hero-section,
   .top-destination,
   .latest-story,
-  .t-highlights {
+  .t-highlights,
+  .subscribe-content,
+  footer {
     padding: 0 3rem;
   }
   .hero-section {
@@ -405,5 +480,20 @@ h2 {
     height: 100%;
     width: 100%;
     aspect-ratio: 1/1.1;
+  }
+  .subscribe-content h2 {
+    line-height: 1.5;
+  }
+  footer {
+    flex-direction: row;
+  }
+  footer .logo {
+    width: 20%;
+  }
+  footer .nav {
+    width: 80%;
+  }
+  footer .nav .menu {
+    grid-template-columns: repeat(3, 1fr);
   }
 }/*# sourceMappingURL=style.css.map */
