--- a/Front-End/interactive-responsive-project/styles/style.scss
+++ b/Front-End/interactive-responsive-project/styles/style.scss
@@ -29,7 +29,9 @@ h2 {
 .hero-section,
 .top-destination,
 .latest-story,
-.t-highlights {
+.t-highlights,
+.subscribe-content,
+footer {
   padding: 0 1.2rem;
 }
 // Hero Section
@@ -309,6 +311,79 @@ h2 {
   }
 }
 
+// Subscribe
+.subscribe {
+  margin-top: 4rem;
+  background-color: rgba(128, 128, 128, 0.881);
+  width: 100%;
+  max-height: 25rem;
+  .subscribe-content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 4rem 0;
+    gap: 1rem;
+    text-align: center;
+    h2 {
+      color: #fff;
+    }
+    form {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 1rem;
+      #email {
+        padding: 0.4rem 0.6rem;
+        width: initial;
+        border-radius: 1rem;
+        border: none;
+        width: 15rem;
+        outline: none;
+      }
+      #btn {
+        border: none;
+        outline: none;
+        background-color: rgb(74, 74, 74);
+        color: #fff;
+        padding: 0.4rem 0.6rem;
+        border-radius: 1rem;
+      }
+    }
+    p {
+      font-size: 0.7rem;
+      color: #fff;
+    }
+  }
+}
+
+// Footer
+footer {
+  margin-top: 4rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  .nav {
+    display: grid;
+    gap: 1rem;
+    .menu {
+      display: grid;
+      gap: 1rem;
+      p {
+        font-size: 1rem;
+        font-weight: 500;
+      }
+    }
+  }
+}
+
+.copy {
+  background-color: #111;
+  color: #fff;
+  text-align: center;
+  line-height: 3rem;
+  margin-top: 2rem;
+}
 // Responsive
 @media (min-width: 1020px) {
   h2 {
@@ -318,7 +393,9 @@ h2 {
   .hero-section,
   .top-destination,
   .latest-story,
-  .t-highlights {
+  .t-highlights,
+  .subscribe-content,
+  footer {
     padding: 0 3rem;
   }
   .hero-section {
@@ -425,11 +502,11 @@ h2 {
       flex-direction: row;
       .top-section {
         width: 50%;
-        .review{
-          h4{
+        .review {
+          h4 {
             font-size: 1rem;
           }
-          p{
+          p {
             font-size: 1rem;
           }
         }
@@ -451,6 +528,23 @@ h2 {
             aspect-ratio: 1/1.1;
           }
         }
+      }
+    }
+  }
+  .subscribe-content {
+    h2 {
+      line-height: 1.5;
+    }
+  }
+  footer {
+    flex-direction: row;
+    .logo {
+      width: 20%;
+    }
+    .nav {
+      width: 80%;
+      .menu {
+        grid-template-columns: repeat(3, 1fr);
       }
     }
   }
