--- a/HTML-CSS/Erikk-template/styles/style.css
+++ b/HTML-CSS/Erikk-template/styles/style.css
@@ -20,12 +20,29 @@ html {
   font-size: clamp(16px, 1vw, 20px);
 }
 
+::-webkit-scrollbar {
+  scrollbar-width: none;
+}
+
 main {
   padding: 2rem;
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 3rem;
+}
+
+h1 {
+  font-size: 2.6rem;
+  font-weight: 400;
+  line-height: 1;
+  margin: 1rem 0;
+  text-transform: uppercase;
+}
+
+p {
+  font-family: monospace;
+  line-height: 1.5;
 }
 
 .hero-wrapper {
@@ -72,18 +89,8 @@ main {
   flex-direction: column;
   gap: 3rem;
 }
-.services-wrapper .bottom-container .headings h1 {
-  font-size: 3rem;
-  font-weight: 400;
-  line-height: 1;
-  margin: 1rem 0;
-  text-transform: uppercase;
-}
 .services-wrapper .bottom-container .headings p {
-  font-size: 1rem;
-  font-size: 1.2rem;
-  font-family: monospace;
-  line-height: 1.5;
+  font-size: 1.15rem;
   opacity: 0.9;
 }
 .services-wrapper .bottom-container .services {
@@ -104,9 +111,45 @@ main {
   opacity: 0.6;
 }
 
+.brand-solution {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.brand-solution .top-container {
+  width: 100%;
+}
+.brand-solution .top-container img {
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 1/1;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+.brand-solution .bottom-container {
+  display: flex;
+}
+.brand-solution .bottom-container p {
+  writing-mode: vertical-rl;
+  margin-right: 1.5rem;
+  margin-top: 1rem;
+  opacity: 0.8;
+}
+.brand-solution .bottom-container .text p {
+  writing-mode: initial;
+  opacity: 0.7;
+  font-size: 1.15rem;
+}
+
 @media (min-width: 768px) {
   main {
     padding: 4rem;
+  }
+  h1 {
+    font-size: 3.5rem;
   }
   .services-wrapper {
     flex-direction: row-reverse;
@@ -124,9 +167,6 @@ main {
   .services-wrapper .bottom-container {
     width: 50%;
   }
-  .services-wrapper .bottom-container .headings h1 {
-    font-size: 2.2rem;
-  }
   .services-wrapper .bottom-container .headings p {
     font-size: 1.1rem;
   }
@@ -136,8 +176,41 @@ main {
   .services-wrapper .bottom-container .services .service p {
     font-size: 1.4rem;
   }
+  .brand-solution {
+    flex-direction: row;
+    gap: 2rem;
+  }
+  .brand-solution .top-container {
+    width: 35%;
+  }
+  .brand-solution .top-container img {
+    height: 100%;
+    width: 100%;
+  }
+  .brand-solution .bottom-container {
+    width: 65%;
+    flex-direction: row-reverse;
+  }
+  .brand-solution .bottom-container p {
+    margin-right: 0;
+  }
+  .brand-solution .bottom-container .text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .brand-solution .bottom-container .text p {
+    max-width: 65%;
+    padding-top: auto;
+  }
 }
 @media (min-width: 1020px) {
+  h1 {
+    font-size: 5.3rem;
+  }
+  p {
+    font-size: 1.6rem;
+  }
   .hero-wrapper .text p {
     font-size: 1rem;
   }
@@ -151,13 +224,6 @@ main {
   .services-wrapper .top-container img {
     height: 100%;
     width: 100%;
-  }
-  .services-wrapper .bottom-container .headings h1 {
-    font-size: 5.3rem;
-    font-weight: 300;
-  }
-  .services-wrapper .bottom-container .headings p {
-    font-size: 1.6rem;
   }
   .services-wrapper .bottom-container .services .service p {
     font-size: 2rem;
