--- a/HTML-CSS/Erikk-template/styles/style.scss
+++ b/HTML-CSS/Erikk-template/styles/style.scss
@@ -18,13 +18,28 @@ body {
 html {
   font-size: clamp(16px, 1vw, 20px);
 }
-
+::-webkit-scrollbar {
+  scrollbar-width: none;
+}
 main {
   padding: 2rem;
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 3rem;
+}
+
+h1 {
+  font-size: 2.6rem;
+  font-weight: 400;
+  line-height: 1;
+  margin: 1rem 0;
+  text-transform: uppercase;
+}
+
+p {
+  font-family: monospace;
+  line-height: 1.5;
 }
 
 .hero-wrapper {
@@ -69,18 +84,8 @@ main {
     flex-direction: column;
     gap: 3rem;
     .headings {
-      h1 {
-        font-size: 3rem;
-        font-weight: 400;
-        line-height: 1;
-        margin: 1rem 0;
-        text-transform: uppercase;
-      }
       p {
-        font-size: 1rem;
-        font-size: 1.2rem;
-        font-family: monospace;
-        line-height: 1.5;
+        font-size: 1.15rem;
         opacity: 0.9;
       }
     }
@@ -104,11 +109,48 @@ main {
   }
 }
 
+// brand-solution
+.brand-solution {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  .top-container {
+    width: 100%;
+    img {
+      width: 100%;
+      height: 100%;
+      aspect-ratio: 1/1;
+      object-fit: cover;
+      object-position: center;
+    }
+  }
+  .bottom-container {
+    display: flex;
+    p {
+      writing-mode: vertical-rl;
+      margin-right: 1.5rem;
+      margin-top: 1rem;
+      opacity: 0.8;
+    }
+    .text {
+      p {
+        writing-mode: initial;
+        opacity: 0.7;
+        font-size: 1.15rem;
+      }
+    }
+  }
+}
+
 // Responsive
 
 @media (min-width: 768px) {
   main {
     padding: 4rem;
+  }
+  h1 {
+    font-size: 3.5rem;
   }
   .services-wrapper {
     flex-direction: row-reverse;
@@ -125,9 +167,6 @@ main {
     .bottom-container {
       width: 50%;
       .headings {
-        h1 {
-          font-size: 2.2rem;
-        }
         p {
           font-size: 1.1rem;
         }
@@ -142,9 +181,42 @@ main {
       }
     }
   }
+  .brand-solution {
+    flex-direction: row;
+    gap: 2rem;
+    .top-container {
+      width: 35%;
+      img {
+        height: 100%;
+        width: 100%;
+      }
+    }
+    .bottom-container {
+      width: 65%;
+      flex-direction: row-reverse;
+      p {
+        margin-right: 0;
+      }
+      .text {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        p {
+          max-width: 65%;
+          padding-top: auto;
+        }
+      }
+    }
+  }
 }
 
 @media (min-width: 1020px) {
+  h1 {
+    font-size: 5.3rem;
+  }
+  p {
+    font-size: 1.6rem;
+  }
   .hero-wrapper {
     .text {
       p {
@@ -163,15 +235,6 @@ main {
       }
     }
     .bottom-container {
-      .headings {
-        h1 {
-          font-size: 5.3rem;
-          font-weight: 300;
-        }
-        p {
-          font-size: 1.6rem;
-        }
-      }
       .services {
         .service {
           p {
