--- a/HTML-CSS/Erikk-template/styles/style.scss
+++ b/HTML-CSS/Erikk-template/styles/style.scss
@@ -33,10 +33,15 @@ h1 {
   font-size: 2.6rem;
   font-weight: 400;
   line-height: 1;
-  margin: 1rem 0;
+  margin-top: 1rem;
   text-transform: uppercase;
 }
-
+h2 {
+  font-size: 2rem;
+  font-weight: 300;
+  letter-spacing: -1px;
+  text-transform: uppercase;
+}
 p {
   font-family: monospace;
   line-height: 1.5;
@@ -143,11 +148,64 @@ p {
   }
 }
 
+// our-services
+.our-services {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  hr {
+    opacity: 0.7;
+  }
+  .top-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    h1 {
+      br {
+        display: none;
+      }
+    }
+    .service-list {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      .item {
+        p {
+          opacity: 0.6;
+          font-size: 1.1rem;
+        }
+        .link {
+          display: flex;
+          gap: 0.7rem;
+          margin: 0.9rem 0 0.6rem 0;
+          p {
+            opacity: 1;
+          }
+          img {
+            aspect-ratio: 1/1;
+          }
+        }
+      }
+    }
+  }
+  .bottom-container {
+    width: 100%;
+    img {
+      aspect-ratio: 1/1;
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+      object-position: top;
+    }
+  }
+}
+
 // Responsive
 
 @media (min-width: 768px) {
   main {
     padding: 4rem;
+    gap: 5rem;
   }
   h1 {
     font-size: 3.5rem;
@@ -208,6 +266,37 @@ p {
       }
     }
   }
+  .our-services {
+    flex-direction: row;
+    gap: 3rem;
+    .top-container {
+      width: 50%;
+      h1 {
+        font-size: 6rem;
+        br {
+          display: block;
+        }
+      }
+      .service-list {
+        margin-top: auto;
+        display: flex;
+        flex-direction: row;
+        .item {
+          p {
+            font-size: 1.4rem;
+          }
+        }
+      }
+    }
+    .bottom-container {
+      width: 50%;
+      aspect-ratio: 1/1.4;
+      img {
+        height: 100%;
+        width: 100%;
+      }
+    }
+  }
 }
 
 @media (min-width: 1020px) {
@@ -241,6 +330,15 @@ p {
             font-size: 2rem;
           }
         }
+      }
+    }
+  }
+  .our-services {
+    .bottom-container {
+      aspect-ratio: 1/1;
+      img {
+        height: 100%;
+        width: 100%;
       }
     }
   }
