--- a/HTML-CSS/Erikk-template/styles/style.css
+++ b/HTML-CSS/Erikk-template/styles/style.css
@@ -32,6 +32,10 @@ main {
   gap: 3rem;
 }
 
+hr {
+  opacity: 0.6;
+}
+
 h1 {
   font-size: 2.6rem;
   font-weight: 400;
@@ -114,9 +118,6 @@ p {
   font-weight: 300;
   text-transform: uppercase;
 }
-.services-wrapper .bottom-container .services hr {
-  opacity: 0.6;
-}
 
 .brand-solution {
   width: 100%;
@@ -155,9 +156,6 @@ p {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-}
-.our-services hr {
-  opacity: 0.7;
 }
 .our-services .top-container {
   display: flex;
@@ -262,6 +260,41 @@ p {
 }
 .selected-work .bottom-container {
   flex-direction: row-reverse;
+}
+
+.clients {
+  width: 100%;
+}
+.clients .top-container {
+  display: none;
+}
+.clients .bottom-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.clients .bottom-container .heading {
+  width: 100%;
+}
+.clients .bottom-container .heading img {
+  width: 100%;
+  height: 100%;
+}
+.clients .bottom-container .client-list {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.clients .bottom-container .client-list .client {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.clients .bottom-container .client-list .client .name {
+  display: flex;
+  align-items: center;
+  gap: 2.5rem;
 }
 
 @media (min-width: 768px) {
@@ -387,6 +420,24 @@ p {
   .selected-work .top-container .text .link,
   .selected-work .bottom-container .text .link {
     margin-top: auto;
+  }
+  .clients {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 3rem;
+  }
+  .clients .top-container {
+    width: 35%;
+  }
+  .clients .bottom-container {
+    width: 65%;
+  }
+  .clients .bottom-container .heading {
+    width: 100%;
+    text-align: right;
+  }
+  .clients .bottom-container .heading img {
+    width: 50%;
   }
 }
 @media (min-width: 1020px) {
