--- a/HTML-CSS/Erikk-template/styles/style.css
+++ b/HTML-CSS/Erikk-template/styles/style.css
@@ -297,6 +297,71 @@ p {
   gap: 2.5rem;
 }
 
+.team {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.team .top-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.team .top-container h1 {
+  font-size: 4rem;
+}
+.team .top-container p {
+  opacity: 0.7;
+}
+.team .bottom-container {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+.team .bottom-container .team-member {
+  width: 100%;
+  flex: 1 1 calc(50% - 2rem);
+}
+.team .bottom-container .team-member h2 {
+  margin-bottom: 0.7rem;
+}
+.team .bottom-container .team-member .profile {
+  width: 100%;
+}
+.team .bottom-container .team-member .profile img {
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 1/1.3;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: top;
+     object-position: top;
+}
+.team .bottom-container .team-member .profession {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+  gap: 0.7rem;
+}
+.team .bottom-container .team-member .profession p {
+  width: 50%;
+  opacity: 1;
+}
+.team .bottom-container .team-member .profession .social {
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+}
+.team .bottom-container .team-member .profession .social img {
+  width: 2rem;
+  aspect-ratio: 1/1;
+}
+.team .bottom-container .team-member p {
+  opacity: 0.7;
+}
+
 @media (min-width: 768px) {
   main {
     padding: 4rem;
@@ -438,6 +503,27 @@ p {
   }
   .clients .bottom-container .heading img {
     width: 50%;
+  }
+  .team .top-container {
+    flex-direction: row;
+  }
+  .team .top-container h1 {
+    width: 50%;
+  }
+  .team .top-container p {
+    width: 50%;
+  }
+  .team .bottom-container {
+    flex-wrap: nowrap;
+  }
+  .team .bottom-container p {
+    font-size: 0.9rem;
+  }
+  .team .bottom-container .team-member {
+    flex: 1;
+  }
+  .team .bottom-container .team-member .profession .social img {
+    width: 1.5rem;
   }
 }
 @media (min-width: 1020px) {
