--- a/HTML-CSS/Erikk-template/styles/style.scss
+++ b/HTML-CSS/Erikk-template/styles/style.scss
@@ -290,6 +290,70 @@ p {
   }
 }
 
+// team
+.team {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  .top-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    h1 {
+      font-size: 4rem;
+    }
+    p {
+      opacity: 0.7;
+    }
+  }
+  .bottom-container {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    .team-member {
+      width: 100%;
+      flex: 1 1 calc(50% - 2rem);
+      h2 {
+        margin-bottom: 0.7rem;
+      }
+      .profile {
+        width: 100%;
+        img {
+          width: 100%;
+          height: 100%;
+          aspect-ratio: 1/1.3;
+          object-fit: cover;
+          object-position: top;
+        }
+      }
+      .profession {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 1rem;
+        gap: 0.7rem;
+        p {
+          width: 50%;
+          opacity: 1;
+        }
+        .social {
+          width: 50%;
+          display: flex;
+          justify-content: space-between;
+          img {
+            width: 2rem;
+            aspect-ratio: 1/1;
+          }
+        }
+      }
+      p {
+        opacity: 0.7;
+      }
+    }
+  }
+}
+
 // Responsive
 
 @media (min-width: 768px) {
@@ -429,6 +493,33 @@ p {
         text-align: right;
         img {
           width: 50%;
+        }
+      }
+    }
+  }
+  .team {
+    .top-container {
+      flex-direction: row;
+      h1 {
+        width: 50%;
+      }
+      p {
+        width: 50%;
+      }
+    }
+    .bottom-container {
+      p{
+        font-size: 0.9rem;
+      }
+      flex-wrap: nowrap;
+      .team-member {
+        flex: 1;
+        .profession{
+          .social{
+            img{
+              width: 1.5rem;
+            }
+          }
         }
       }
     }
