--- a/Task-Manager/style.css
+++ b/Task-Manager/style.css
@@ -18,12 +18,17 @@ body {
   font-family: Arial, sans-serif;
 }
 h1 {
-  font-size: 25px;
+  font-size: 35px;
 }
 main {
   width: 100%;
+  height: 100%;
 }
 /* all-elems */
+main * {
+  height: 100%;
+  position: relative;
+}
 .all-elems {
   padding: 10px;
   display: flex;
@@ -53,7 +58,36 @@ main {
   right: 10px;
   color: var(--pri);
   font-size: 18px;
+  height: fit-content;
 }
 .elem:active {
   scale: 0.9;
+}
+.elm-page {
+  background-color: var(--pri);
+  padding: 10px;
+  display: none;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 2000;
+  display: none;
+}
+.ri-close-line {
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  font-size: 24px;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  border: 1px solid black;
+  text-align: center;
+  border-radius: 50%;
+  transition: all ease 0.5s;
+}
+.ri-close-line:active {
+  scale: 0.95;
 }
