--- a/Task-Manager/style.css
+++ b/Task-Manager/style.css
@@ -1,7 +1,12 @@
 :root {
-  --pri: #f2f2f2;
-  --sec: #020202;
+  --pri: #fefcfb;
+  --sec: #1e293b;
+  --off-white: #f1f5f9;
+  --accent: #d97706;
+  --full-width: 100%;
+  --full-height: 100%;
 }
+
 * {
   margin: 0;
   padding: 0;
@@ -9,8 +14,8 @@
 }
 html,
 body {
-  height: 100%;
-  width: 100%;
+  height: var(--full-height);
+  width: var(--full-width);
 }
 body {
   background-color: var(--pri);
@@ -20,13 +25,14 @@ body {
 h1 {
   font-size: 35px;
 }
+
 main {
-  width: 100%;
-  height: 100%;
+  width: var(--full-width);
+  height: var(--full-height);
 }
 /* all-elems */
 main * {
-  height: 100%;
+  height: var(--full-height);
   position: relative;
 }
 .all-elems {
@@ -45,8 +51,8 @@ main * {
   transition: all ease 0.5s;
 }
 .elem img {
-  height: 100%;
-  width: 100%;
+  height: var(--full-height);
+  width: var(--full-width);
   object-fit: cover;
   object-position: center;
   border-radius: 10px;
@@ -63,17 +69,20 @@ main * {
 .elem:active {
   scale: 0.9;
 }
-.elm-page {
+.feature {
   background-color: var(--pri);
   padding: 10px;
   display: none;
   position: fixed;
-  width: 100%;
+  width: var(--full-width);
   top: 0;
   left: 0;
   bottom: 0;
   z-index: 2000;
   display: none;
+}
+.feature h1 {
+  height: fit-content;
 }
 .ri-close-line {
   cursor: pointer;
@@ -90,4 +99,93 @@ main * {
 }
 .ri-close-line:active {
   scale: 0.95;
+}
+
+/* features - to-do-page */
+
+.to-do-page .task-container {
+  width: var(--full-width);
+  height: 85%;
+  margin-top: 25px;
+  background-color: var(--off-white);
+  display: flex;
+  justify-content: space-between;
+  border-radius: 20px;
+  box-shadow: 0px 2px 10px rgba(128, 128, 128, 0.221);
+}
+.to-do-page .task-container .add-task {
+  width: 34%;
+}
+.to-do-page .task-container .task-list {
+  width: 64%;
+}
+.to-do-page .task-container .task-list,
+.add-task {
+  height: var(--full-height);
+  background-color: var(--pri);
+  border-radius: 10px;
+}
+.to-do-page .task-container .add-task form {
+  margin-top: 20px;
+  width: var(--full-width);
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  padding: 20px;
+}
+.to-do-page .task-container .add-task form * {
+  border-radius: 10px;
+  padding: 15px 10px;
+  outline: none;
+  width: var(--full-width);
+  font-size: 16px;
+}
+input {
+  border: 1px solid var(--sec);
+}
+textarea {
+  resize: none;
+  height: 300px;
+  border: 1px solid var(--sec);
+}
+input[type="submit"] {
+  background-color: var(--accent);
+  color: #f1f5f9;
+  font-weight: 700;
+  cursor: pointer;
+  border: none;
+}
+.to-do-page .task-container .add-task form input[type="checkbox"] {
+  width: fit-content;
+  height: 19px;
+  width: 19px;
+}
+.mark-importent {
+  display: flex;
+  align-items: center;
+  margin: -20px 0px;
+}
+.to-do-page .task-container .task-list .task {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+  padding: 15px 20px;
+  height: fit-content;
+  background-color: var(--accent);
+  color: var(--pri);
+  font-size: 20px;
+  font-weight: 500;
+  margin-left: 20px;
+  margin-right: 20px;
+  border-radius: 10px;
+}
+.to-do-page .task-container .task-list .task button {
+  padding: 10px 20px;
+  border: 1px solid var(--pri);
+  border-radius: 10px;
+  color: var(--sec);
+  background-color: var(--pri);
+  cursor: pointer;
 }
